# ARCHCODE

./: .coverage  .cursorrules  .dockerignore  .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  ARCHCODE_MISSION.md  ARCHCODE_Preprint.html  ARCHCODE_Preprint_RU.html  AUDIT_HIDDEN_FAILURE_MODES_2026-02-05.md  AUDIT_REPORT.md  AUDIT_RESPONSE.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_PHYSICS.md  CONTRIBUTING.md  CTCF_VALIDATION_SUMMARY.md  DATA_DOWNLOAD_MANUAL.md  DATA_DOWNLOAD_README.md  DATA_INVENTORY_RNA_SEQ_SEARCH.md  Dockerfile  FALSIFICATION_REPORT.md  FASTQ_DOWNLOAD_PLAN_EVENING.md  FINAL_REPORT_2026-02-02.md  GEO_SEARCH_RESULTS_HUDEP2_RNA_SEQ.md  GSE185608_STRUCTURE.md  HALUGATE_REPORT.md  HIC_STRUCTURE_ANALYSIS_SUMMARY.md  IMMEDIATE_TASKS_SUMMARY.md  INFRASTRUCTURE_READINESS_CHECKLIST.md  INSTALL.md  INSTALL_SRA_TOOLKIT_WINDOWS.md  INTEGRITY_CHECK_20260304.txt  KNOWN_ISSUES.md  LICENSE  MANUSCRIPT_UPDATES_CHECKLIST.md  METHODS.md  Makefile  PAPER_SEARCH_RESULTS.md  (+60 more)
.claude/: README.md  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.vizir/: integrity_ledger.json
analysis/: DISCORDANCE_REPORT.md  DISCORDANCE_REPORT_v2.md  Q2_structural_blindspots.csv  Q2b_top20_manuscript.csv  Q2b_true_blindspots.csv  TERT_validation.csv  TERT_validation_summary.json  abc_q2b_overlap.csv  abc_q2b_summary.json  ablation_study_results.csv  ablation_study_summary.json  alphamissense_archcode_overlay.json  architectural_risk_score_poc.csv  architectural_risk_score_summary.json  ars_taxonomy_overlay.md  ars_taxonomy_overlay_summary.json  bet_sweep_multilocus.csv  bet_sweep_multilocus_summary.json  cftr_tissue_match_comparison.json  compensatory_screen_hbb.csv  compensatory_screen_summary.json  contact_metric_robustness_summary.json  crispri_k562_hbb.json  crispri_q2b_overlap.json  discordance_2x2_matrix.csv  discordance_by_locus.csv  discovery_locus_ranking.json  encode_tissue_data_availability.json  enhancer_proximity_odds.json  exp009_loading_mode_ablation.json  fragility_atlas_brca1.csv  fragility_atlas_brca1_summary.json  fragility_atlas_hbb.csv  fragility_zones_hbb.json  gasperini_benchmark_matches.csv  gasperini_benchmark_summary.json  gnomad_constraint_taxonomy.json  gwas_archcode_overlap.csv  gwas_archcode_overlay.csv  gwas_archcode_overlay.json  (+38 more)
archcode_bio/: __init__.py
archcode_core/: CHANGELOG.md
boundary_collapse/: CHANGELOG.md
boundary_stability/: CHANGELOG.md  VERSION
cellular_kernel/: README.md  main.py
config/: archcode_engine.yaml  boundary_collapse.yaml  boundary_stability.yaml  default.json  epigenetic_compiler.yaml  genome_to_tension.yaml  nature2025.json  nonB_logic.yaml  pearls_vcrispr_top3.json  risk_matrix.yaml  te_grammar.yaml  unknome_genes_subset.json
configs/: pipeline_fast.yaml  pipeline_full.yaml  rs13_multi_condition.yaml
data/: README.md  archcode_hbb_literature_ctcf_matrix.json  archcode_hbb_literature_ctcf_normalized.npy  archcode_hbb_simulation_matrix.json  archcode_hbb_simulation_matrix_flat.json  archcode_hbb_simulation_normalized.npy  bcl11a_variants.csv  brca1_clinvar_raw.json  brca1_variants.csv  cftr_clinvar_raw.json  cftr_variants.csv  clinvar_bcl11a_variants.csv  clinvar_gata1_variants.csv  clinvar_hba1_variants.csv  clinvar_hbb_processed.json  clinvar_hbb_raw.json  clinvar_myc_variants.csv  clinvar_pten_variants.csv  correlation_results.json  correlation_results_v1_normalized.json  correlation_results_v2_literature_ctcf.json  correlation_results_v2_normalized.json  ctcf_validation_literature.csv  gata1_variants.csv  gjb2_clinvar_raw.json  gjb2_variants.csv  h19_clinvar_raw.json  h19_variants.csv  hba1_variants.csv  hbb_benign_variants.csv  hbb_benign_vep_results.csv  hbb_ctcf_sites_literature.json  hbb_real_variants.csv  hbb_vep_results.csv  hbb_vus_variants.csv  hic_structure_analysis.csv  hudep2_wt_hic_hbb_95kb.npy  hudep2_wt_hic_hbb_locus.npy  hudep2_wt_hic_hbb_locus_normalized.npy  hudep2_wt_hic_metadata.json  (+24 more)
docs/: ALPHAGENOME.md  ALPHAGENOME_FAQ.md  ALPHAGENOME_RESEARCH_ANALYSIS.md  ARCHCODE_FULL_VALIDATION_PLAN.md  ARCHCODE_FUNDAMENTAL_LAW.md  ARCHCODE_PROJECT_PRESENTATION.md  ARCHCODE_TERAG_API.md  ARCHCODE_applicability_rules.md  ARCHCODE_collab_experiments_onepager.md  ARCHCODE_dataset_watchlist.md  ARCHCODE_experiment_backlog.md  ARCHCODE_next_research_plan.md  ARCHCODE_v1.1_IMPLEMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_MERMAID.md  BIO_METRICS_ENGINE.md  BOUNDARY_STABILITY.md  BOUNDARY_STABILITY_INTEGRATION.md  CAPABILITIES.md  CDLS_EXPERIMENT_SUCCESS.md  CODEX_ZERO_HALLUCINATION_GATES.md  CODE_ANALYSIS_v1.1.md  COGNITIVE_CORE.md  COLD_EYE_AUDIT_REPORT.md  COLD_EYE_AUDIT_TZ.md  (+102 more)
(+992 files in other folders)
