[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "archcode"
version = "0.1.0"
description = "Reproducible physics-based framework for 3D genome architecture and chromatin loop dynamics."
authors = [{ name = "Sergey Boiko", email = "sergeikuch80@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/sergeeey/ARCHCODE"
